basic structure and css

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,16 +12,16 @@
         <a href="home.html">Home</a>
         <a href="about.html">About</a>
         <a href="match.html">Find your Match</a>
-        <a href="profile.html" class="right">Your Profile</a>
+        <a href="profile.html" class="right">Profile</a>
         <a href="login.html" class="right">Login</a>
         <a href="signup.html" class="right">Signup</a>
     </nav>
 </header> 
 <body>
- <h1> Struggle to find friends? </h1>
- <h2> Then this place is for you! </h2>
- <p> lorem ipsum </p>
-
+    {% block bodycontent %}
+    {% endblock %}
+<footer> 
+    <p> Copyright 2022 </p>
+</footer>
 </body>
 </html>
-
