--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="stylesheet" href="../static/css/styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title> Match for Friends </title>
 </head>
 <header>
@@ -12,16 +13,24 @@
         <a href="home.html">Home</a>
         <a href="about.html">About</a>
         <a href="match.html">Find your Match</a>
-        <a href="profile.html" class="right">Your Profile</a>
+        <a href="profile.html" class="right">Profile</a>
         <a href="login.html" class="right">Login</a>
         <a href="signup.html" class="right">Signup</a>
     </nav>
 </header> 
 <body>
- <h1> Struggle to find friends? </h1>
- <h2> Then this place is for you! </h2>
- <p> lorem ipsum </p>
+    <div class="profile">
+    <img src="../static/img/profile_pic.jpeg" alt="Name" class="profile_pic">
+    <h1 class="profile_name">First Name Last Name</h1>
+    <p class="profile_age">Age</p>
+    <p class="profile_location">Location</p>
+    <p class="profile_profession">Profession</p>
+    <p class="profile_bio">tell us something about you!</p>
+    <p><button class="profilebtn">Change Profile</button></p>
+    </div>
 
+<footer> 
+Copyright 2022
+</footer>
 </body>
 </html>
-
