--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,22 +1,38 @@
-<!DOCTYPE html><html>
+<!-- {% extends 'base.html' %}
+{% block bodycontent %} // Not working yet--> 
+
+<!DOCTYPE html>
+<html lang="en"> <!-- language english -->
 <head>
-     <link rel="stylesheet" href="../static/css/styles.css">
-<title>Match for Friends</title>
+  <meta charset="UTF-8"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <link rel="stylesheet" href="../static/css/styles.css">
+  <title>Match for Friends</title>
 </head>
 <header>
-    <!-- img src="boxmodel.png" width=300px height=auto> -->
-    <nav id="navigationBar">
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-</header>  
+    <!-- img src="name-of-the-photo.png" width=300px height=auto> // add logo or photo -->
+  <nav class="navigationBar">
+      <a href="/">Home</a>
+      <a href="about.html">About</a>
+      <a href="match.html">Find your Match</a>
+      <a href="profile.html" class="right">Profile</a>
+      <a href="login.html" class="right">Login</a>
+      <a href="signup.html" class="right">Signup</a>
+  </nav>
+</header>
 <body>
- <h1> Match for Friends </h1>
- <p> This is an app for finding friends. </p>
+  <h1> Match for Friends </h1>
+  <h2> This is an app for finding friends. </h2>
+  <p> Sign up with us to find new friends that match you! It only takes 2 minutes.</p>
+  <button a href="login.html" class="homebtn signup">Sign Up</button> 
+  <p> Already signed up? Log in to find friends!</p>
+  <button a href="login.html" class="homebtn login">Login</button>
+
+<footer> 
+  <p> Copyright 2022 </p>
+</footer>
 </body>
 </html>
+
 
 <!-- this is a comment -->
