--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -18,6 +18,7 @@
     </nav>
 </header> 
 <body>
+    <h1> Login </h1>
     <form method="POST" action="/login">
         <div class="imgcontainer">
             <img src="../static/img/profile_pic.jpeg" alt="Profile Picture" class="profile_pic"> 
