--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="stylesheet" href="../static/css/styles.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.10/js/select2.min.js"></script>
+    </script>
   <title> Match for Friends </title>
 </head>
 <header>
@@ -23,5 +26,6 @@
 <footer> 
     <p> Copyright 2022 </p>
 </footer>
+
 </body>
 </html>
