--- a/app/templates/match.html
+++ b/app/templates/match.html
@@ -18,9 +18,24 @@
     </nav>
 </header> 
 <body>
-
+    <div class="container">
+        <form action="/quiz" method="POST" role="form">
+            {% for question in form %}
+                <div class="question">
+                    <h2>{{ question.label }}</h2>
+                </div>
+                <div class="answer">
+                    {{ question }}
+                </div>
+            {% endfor %}
+            <!-- <input type="submit" value="Submit"/> -->
+            <button type="submit">Submit</button>
+        </form>
+    </div>
 <footer> 
     <p> Copyright 2022 </p>
 </footer>
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 </body>
 </html>
