After session with Serban

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,27 +1,9 @@
-<!DOCTYPE html>
-<html lang="en"> <!-- language english -->
-<head>
-  <meta charset="UTF-8"> 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <link rel="stylesheet" href="../static/css/styles.css">
-  <title> Match for Friends </title>
-</head>
-<header>
-    <!-- img src="name-of-the-photo.png" width=300px height=auto> // add logo or photo -->
-    <nav class="navigationBar">
-        <a href="home.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="match.html">Find your Match</a>
-        <a href="profile.html" class="right">Your Profile</a>
-        <a href="login.html" class="right">Login</a>
-        <a href="signup.html" class="right">Signup</a>
-    </nav>
-</header> 
-<body>
+{% extends "base.html" %}
+{%block bodycontent%}
+
  <h1> Struggle to find friends? </h1>
  <h2> Then this place is for you! </h2>
  <p> lorem ipsum </p>
 
-</body>
-</html>
+{% endblock %}
 
