--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,11 +21,13 @@
     </nav>
 </header> 
 <body>
-    {% block bodycontent %}
-    {% endblock %}
+  {% block bodycontent %}
+  {% endblock %}
 <footer> 
     <p> Copyright 2022 </p>
 </footer>
+  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
 </body>
 </html>
