--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,37 +1,11 @@
-<!DOCTYPE html>
-<html lang="en"> <!-- language english -->
-<head>
-  <meta charset="UTF-8"> 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <link rel="stylesheet" href="../static/css/styles.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.10/js/select2.min.js"></script>
-    </script>
-  <title> Match for Friends </title>
-</head>
-<header>
-    <!-- img src="name-of-the-photo.png" width=300px height=auto> // add logo or photo -->
-    <nav class="navigationBar">
-        <a href="home.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="match.html">Find your Match</a>
-        <a href="profile.html" class="right">Profile</a>
-        <a href="login.html" class="right">Login</a>
-        <a href="signup.html" class="right">Signup</a>
-    </nav>
-</header> 
-<body>
-  <h1> Match for Friends </h1>
-  <h2> This is an app for finding friends. </h2>
-  <p> Sign up with us to find new friends that match you! It only takes 2 minutes.</p>
-  <a href="signup.html"><button class="homebtn signup">Sign Up</button></a>
-  <p> Already signed up? Log in to find friends!</p>
-  <a href="login.html"><button class="homebtn login">Login</button></a>
+{% extends "base.html" %}
+{%block bodycontent%}
 
-</body>
-<footer> 
-  <p> Copyright 2022 </p>
-</footer>
+<h1> Match for Friends </h1>
+<h2> This is an app for finding friends. </h2>
+<p> Sign up with us to find new friends that match you! It only takes 2 minutes.</p>
+<a href="signup.html"><button class="homebtn signup">Sign Up</button></a>
+<p> Already signed up? Log in to find friends!</p>
+<a href="login.html"><button class="homebtn login">Login</button></a>
 
-</body>
-</html>
+{% endblock %}
