--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,8 +4,8 @@
 <h1> Match for Friends </h1>
 <h2> This is an app for finding friends. </h2>
 <p> Sign up with us to find new friends that match you! It only takes 2 minutes.</p>
-<a href="signup.html"><button class="homebtn signup">Sign Up</button></a>
+<a href="signup"><button class="homebtn signup">Sign Up</button></a>
 <p> Already signed up? Log in to find friends!</p>
-<a href="login.html"><button class="homebtn login">Login</button></a>
+<a href="login"><button class="homebtn login">Login</button></a>
 
 {% endblock %}
