--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,32 +1,80 @@
 {% extends "base.html" %}
 {%block bodycontent%}
 
-<form method="POST" action="/signup" style="border:1px solid #ccc">
-    <div class="container">
-      <h1>Sign Up</h1>
-      <p>Please fill in this form to create an account.</p>
-      <hr>
-  
-      <label for="email"><b>Email</b></label>
-      <input type="text" placeholder="Enter Email" name="email" required>
-  
-      <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
-  
-      <label for="psw-repeat"><b>Repeat Password</b></label>
-      <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-  
-      <label>
-        <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-      </label>
-  
-      <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-  
-      <div class="clearfix">
-        <button type="button" class="cancelbtn">Cancel</button>
-        <button type="submit" class="signupbtn">Sign Up</button>
-      </div>
-    </div>
-  </form>
+  <div>
+    <form method="POST" action="">
+      {{ form.hidden_tag() }}
+      <fieldset class="form-group">
+        <legend class="border-bottom mb-4">Join Today</legend>
+        <div class="form-group">
+          {{ form.username.label(class="form-control-label")}}
+          
+          {% if form.username.errors %}
+            {{ form.username(class="form control form-control-lg is-invalid")}}
+            <div class="invalid-feedback">
+              {% for errors in form.username.errors %}
+                <span>{{ error }}</span>
+              {% endfor %}
+            </div>
+          {% else %}
+            {{ form.username(class="form-control form control-lg")}}
+          {% endif %}
+        </div>
+        <div class="form-group">
+          {{ form.email.label(class="form-control-label")}}
+          
+          {% if form.email.errors %}
+            {{ form.email(class="form control form-control-lg is-invalid")}}
+            <div class="invalid-feedback">
+              {% for errors in form.email.errors %}
+                <span>{{ error }}</span>
+              {% endfor %}
+            </div>
+          {% else %}
+            {{ form.email(class="form-control form control-lg")}}
+          {% endif %}
+        </div>
+        <div class="form-group">
+          {{ form.password.label(class="form-control-label")}}
+
+          {% if form.password.errors %}
+            {{ form.password(class="form control form-control-lg is-invalid")}}
+            <div class="invalid-feedback">
+              {% for errors in form.password.errors %}
+                <span>{{ error }}</span>
+              {% endfor %}
+            </div>
+          {% else %}
+            {{ form.password(class="form-control form control-lg")}}
+          {% endif %}
+
+        </div>
+        <div class="form-group">
+          {{ form.confirm_password.label(class="form-control-label")}}
+          
+          {% if form.confirm_password.errors %}
+            {{ form.confirm_password(class="form control form-control-lg is-invalid")}}
+            <div class="invalid-feedback">
+              {% for errors in form.confirm_password.errors %}
+                <span>{{ error }}</span>
+              {% endfor %}
+            </div>
+          {% else %}
+            {{ form.confirm_password(class="form-control form control-lg")}}
+          {% endif %}
+          
+        </div>
+      </fieldset>
+      <div class="form-group">
+        {{ form.submit(class="btn btn-outline.info")}}
+      </div> 
+    </form>
+  </div>
+
+  <div class="border-top pt-3">
+    <small class="text-muted">
+      Already have an account? <a class="ml-2" href="{{ url_for('auth.login') }}">Sign In</a>
+    </small>
+  </div>
 
 {% endblock %}
