--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,42 +1,48 @@
 <!DOCTYPE html>
 <html lang="en"> <!-- language english -->
-<head>
-  <meta charset="UTF-8"> 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <link rel="stylesheet" href="../static/css/styles.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.10/js/select2.min.js"></script>
-    </script>
-  <title> Match for Friends </title>
-</head>
-<header>
-    <!-- img src="name-of-the-photo.png" width=300px height=auto> // add logo or photo -->
-    <nav class="navigationBar">
-        <a href="home">Home</a>
-        <a href="about">About</a>
-        <a href="match">Find your Match</a>
-        <a href="profile" class="right">Profile</a>
-        <a href="login" class="right">Login</a>
-        <a href="signup" class="right">Signup</a>
-    </nav>
-</header> 
-<body>
-  {% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
-      {% for category, message in messages %}
-        <div class='alert alert-{{ category }}'>
-          {{ message }}
-        </div>
-      {% endfor %}
-    {% endif %}
-  {% endwith %}
-  {% block bodycontent %}
-  {% endblock %}
-<footer> 
-    <p> Copyright 2022 </p>
-</footer>
-  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+  <head>
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="../static/css/styles.css">
+    
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-</body>
+    <!-- not sure if needed, might delete -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.10/js/select2.min.js"></script>
+      </script>
+    <title> Match for Friends </title>
+  </head>
+  <header>
+      <!-- img src="name-of-the-photo.png" width=300px height=auto> // add logo or photo -->
+      <nav class="navigationBar">
+          <a href="home">Home</a>
+          <a href="about">About</a>
+          <a href="match">Find your Match</a>
+          <a href="profile" class="right">Profile</a>
+          <a href="login" class="right">Login</a>
+          <a href="signup" class="right">Signup</a>
+      </nav>
+  </header> 
+  <body>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        {% for category, message in messages %}
+          <div class='alert alert-{{ category }}'>
+            {{ message }}
+          </div>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
+    {% block bodycontent %}
+    {% endblock %}
+  <footer> 
+      <p> Copyright 2022 </p>
+  </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+  </body>
 </html>
