--- a/app/templates/match.html
+++ b/app/templates/match.html
@@ -2,18 +2,31 @@
 {%block bodycontent%}
 
 <div class="container">
-    <form action="/match" method="POST" role="form">
-        {% for question in form %}
-            <div class="question">
-                <h2>{{ question.label }}</h2>
-            </div>
-            <div class="answer">
-                {{ question }}
-            </div>
-        {% endfor %}
-        <!-- <input type="submit" value="Submit"/> -->
-        <button type="submit">Submit</button>
+    <form method="POST" action="">
+      {{ form.hidden_tag() }}
+      <fieldset class="form-group">
+        <legend class="border-bottom mb-4">Find your match!</legend>
+        <div class="form-group">
+            {{ form.fav_food.label(class="form-control-label")}}
+            {{ form.fav_food(class="form-control form control-lg")}}
+        </div>
+        <div class="form-group">
+            {{ form.fav_movie.label(class="form-control-label")}}
+            {{ form.fav_movie(class="form-control form control-lg")}}
+        </div>
+        <div class="form-group">
+            {{ form.fav_holiday.label(class="form-control-label")}}
+            {{ form.fav_holiday(class="form-control form control-lg")}}
+        </div>
+        <div class="form-group">
+            {{ form.coffee_routine.label(class="form-control-label")}}
+            {{ form.coffee_routine(class="form-control form control-lg")}}
+        </div>
+      </fieldset>
+      <div class="form-group">
+            {{ form.submit(class="btn btn-outline.info")}}
+      </div> 
     </form>
-</div>
+  </div>
 
 {% endblock %}
