--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../static/css/styles.css">
     
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!--link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- not sure if needed, might delete -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
@@ -20,15 +20,16 @@
           <a href="home">Home</a>
           <a href="about">About</a>
           <a href="match">Find your Match</a>
+          <a href="matches">Your Matches</a>
           <a href="profile" class="right">Profile</a>
       </nav>   
       <nav class='navigationBar'>
-          {% if current_user.authenticated %}
+          {% if current_user.is_authenticated %}
           <a href="logout" class="right">Logout</a>
-          {% else %}
+            {% else %}
           <a href="login" class="right">Login</a>
           <a href="signup" class="right">Signup</a>
-          {% endif %}
+            {% endif %}
       </nav>
   </header> 
   <body>
