--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 {%block bodycontent%}
 
- <h1> Struggle to find friends? </h1>
- <h2> Then this place is for you! </h2>
- <p> lorem ipsum </p>
-
+<div class='container'>
+    <h1> Struggle to find friends? </h1>
+    <h2> Then this place is for you! </h2>
+    <p> lorem ipsum </p>
+</div>
 {% endblock %}
 
