--- a/app/templates/matches.html
+++ b/app/templates/matches.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {%block bodycontent%}
 
- <h1> Your Matches </h1>
- <h2> Lorem ipsum </h2>
- <p> lorem ipsum </p>
+<div class="container">
+    <h1> Your Matches </h1>
+</div>
 
 {% endblock %}
