--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {%block bodycontent%}
-
-<h1> Match for Friends </h1>
-<h2> This is an app for finding friends. </h2>
-<p> Sign up with us to find new friends that match you! It only takes 2 minutes.</p>
-<a href="signup"><button class="homebtn signup">Sign Up</button></a>
-<p> Already signed up? Log in to find friends!</p>
-<a href="login"><button class="homebtn login">Login</button></a>
-
+<div class='container'>
+    <h1> Match for Friends </h1>
+    <h2> This is an app for finding friends. </h2>
+    <p> Sign up with us to find new friends that match you! It only takes 2 minutes.</p>
+    <a href="signup"><button class="homebtn signup">Sign Up</button></a>
+    <p> Already signed up? Log in to find friends!</p>
+    <a href="login"><button class="homebtn login">Login</button></a>
+</div>
 {% endblock %}
