--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,56 +2,50 @@
 {%block bodycontent%}
 
   <div>
-    <form method="POST" action="">
-      {{ form.hidden_tag() }}
-      <fieldset class="form-group">
-        <legend class="border-bottom mb-4">Join Today</legend>
-        <div class="form-group">
-          {{ form.email.label(class="form-control-label")}}
-          
-          {% if form.email.errors %}
-            {{ form.email(class="form control form-control-lg is-invalid")}}
-            <div class="invalid-feedback">
-              {% for errors in form.email.errors %}
-                <span>{{ error }}</span>
-              {% endfor %}
-            </div>
-          {% else %}
-            {{ form.email(class="form-control form control-lg")}}
-          {% endif %}
-        </div>
-        <div class="form-group">
-          {{ form.password.label(class="form-control-label")}}
+    <h1>Log In</h1>
+      <form method="POST" action="">
+        {{ form.hidden_tag() }}
+        <div class="container">
+          <div class="form-group">
+            {{ form.email.label(class="form-control-label")}}
+            
+            {% if form.email.errors %}
+              {{ form.email(class="form control form-control-lg is-invalid")}}
+              <div class="invalid-feedback">
+                {% for errors in form.email.errors %}
+                  <span>{{ error }}</span>
+                {% endfor %}
+              </div>
+            {% else %}
+              {{ form.email(class="form-control form control-lg")}}
+            {% endif %}
+          </div>
+          <div class="form-group">
+            {{ form.password.label(class="form-control-label")}}
 
-          {% if form.password.errors %}
-            {{ form.password(class="form control form-control-lg is-invalid")}}
-            <div class="invalid-feedback">
-              {% for errors in form.password.errors %}
-                <span>{{ error }}</span>
-              {% endfor %}
-            </div>
-          {% else %}
-            {{ form.password(class="form-control form control-lg")}}
-          {% endif %}
+            {% if form.password.errors %}
+              {{ form.password(class="form control form-control-lg is-invalid")}}
+              <div class="invalid-feedback">
+                {% for errors in form.password.errors %}
+                  <span>{{ error }}</span>
+                {% endfor %}
+              </div>
+            {% else %}
+              {{ form.password(class="form-control form control-lg")}}
+            {% endif %}
+          </div>
+          <div class="form-group">
+            {{ form.submit(class="btn btn-outline.info")}}
+          </div> 
+          <div>
+            <small>
+              Need to create an account? <a class='small' href="{{ url_for('auth.signup') }}">Sign up now</a>
+            </small>
+          </div>
         </div>
-        <div class="form-check">
-            {{ form.remember(class="form-check-input")}}
-            {{ form.remember.label(class="form-check-label")}}
-        </div>
-      </fieldset>
-      <div class="form-group">
-        {{ form.submit(class="btn btn-outline.info")}}
-      </div> 
-      <small class="text-muted ml-2">
-          <a href="#">Forgot password?</a>
-      </small>
-    </form>
+      </form>
   </div>
 
-  <div class="border-top pt-3">
-    <small class="text-muted">
-      Need to create an account? <a class="ml-2" href="{{ url_for('auth.signup') }}">Sign up now</a>
-    </small>
-  </div>
+ 
 
 {% endblock %}
