--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {%block bodycontent%}
 
-  <div>
+<div>
+  <h1>Sign Up</h1>
     <form method="POST" action="">
       {{ form.hidden_tag() }}
-      <fieldset class="form-group">
-        <legend class="border-bottom mb-4">Join Today</legend>
+      <div class='container'>
         <div class="form-group">
           {{ form.username.label(class="form-control-label")}}
           
@@ -64,17 +64,19 @@
           {% endif %}
           
         </div>
-      </fieldset>
-      <div class="form-group">
-        {{ form.submit(class="btn btn-outline.info")}}
-      </div> 
+        <div class="form-group">
+          {{ form.submit(class="btn btn-outline.info")}}
+        </div> 
+        <div>
+          <small>
+            Already have an account? <a class="small" href="{{ url_for('auth.login') }}">Sign In</a>
+          </small>
+        </div>
+      </div>
+      
+      
     </form>
   </div>
 
-  <div class="border-top pt-3">
-    <small class="text-muted">
-      Already have an account? <a class="ml-2" href="{{ url_for('auth.login') }}">Sign In</a>
-    </small>
-  </div>
 
 {% endblock %}
